--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,8 +1,13 @@
-
 h1 {
-	font-family='ZCOOL QingKe HuangYou', cursive;	
+  font-family: 'Special Elite', cursive;
 }
 
+
+h2 {
+  font-family: 'Special Elite', cursive;
+}
+
+
 h5 {
- 	font-family: 'ZCOOL QingKe HuangYou', cursive;
+  font-family: 'Righteous', cursive;
 }
