--- a/stylesheet.css
+++ b/stylesheet.css
@@ -80,8 +80,8 @@ button:active {
 	background: #006e80;
 }
 
-button__text,
-button__icon {
+.button__text,
+.button__icon {
 	display: inline-flex;
 	align-items: center;
 	padding: 0 24px;
