--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,4 @@
-h1 {
+ h1 {
 	font-family: 'Special Elite', cursive;
   }
   
@@ -18,74 +18,21 @@ h1 {
 	padding: 0;
 }
 
- nav{
-	background-color: #ffffff;
-	color: #000000;
+.wrapper {
+	width: 1170px;
+	margin: auto;
+}
+
+.nav-area {
+	float: right;
 	list-style: none;
-	text-align: right;
-	padding: 20px 0 20px 0;
+	margin-top: 20px;
+	padding: 10px;
 }
 
- nav > li {
-	display: inline-block;
-	padding: 0 25px 0 25px;
-	font-size: 12px;
-}
-
- nav > li > a {
-	text-decoration: none;
-	color: #000000;
-}
-
- nav > li > a:hover {
-	color:aqua;
-}
-
- logo {
-	color: #000000;
+img {
+	margin: 0%;
 	float: left;
-	padding-left: 25px;
-	font-size: 16px;
-	font-weight: bold;
-
-}
-
- logo > a {
-	text-decoration: none;
-	color: #000000;
-}
-
-button {
-	display: inline-flex;
-	height: 50px;
-	padding: 0;
-	background: #009578;
-	border: none;
-	outline: none;
-	border-radius: 5px;
-	overflow: hidden;
-	font-family: 'Quicksand' , sans-serif;
-	font-size: 16px;
-	font-weight: 500;
-	cursor: pointer;
-
-}
-
-button:hover {
-	background: rgb(23, 163, 151);
-
-}
-
-button:active {
-	background: #006e80;
-}
-
-.button__text,
-.button__icon {
-	display: inline-flex;
-	align-items: center;
-	padding: 0 24px;
-	color: #fff
-	height: 100%;
-	
+	margin-top: 0%;
+	padding: 5px;
 }
